# green-updater

./: .gitignore  Cargo.toml  PRIVACY_POLICY  PRIVACY_POLICY_DRAFT  README.md  flake.nix  install.nsi  installer.nsi  shell.nix
.github/workflows/: build.yml
src/: cloud_logging.rs  file_logging.rs  finished.rs  main.rs  mc_select.rs  notify.rs  util.rs  worker.rs
