[package]
name = "green-updater"
version = "0.2.0"
edition = "2021"
authors = ["urlordjames <32751441+urlordjames@users.noreply.github.com>"]
license = "GPL-3.0+"

[dependencies.iced]
version = "0.12"
features = [ "tokio" ]

[dependencies.green-lib]
version = "0.6"
git = "https://github.com/urlordjames/green-lib"

[dependencies.rfd]
version = "0.14"
default-features = false
features = [ "xdg-portal", "tokio" ]

[dependencies]
url = "2.5"
notify-rust = "4.11"
tokio = "1.37"
open = "5.1"
pretty_env_logger = "0.5"

[profile.release]
lto = "fat"
