[package]
name = "green-updater"
version = "0.3.0"
edition = "2021"
authors = ["urlordjames <32751441+urlordjames@users.noreply.github.com>"]
license = "GPL-3.0+"

[dependencies.iced]
version = "0.12"
features = [ "tokio" ]

[dependencies.green-lib]
version = "0.6"
git = "https://github.com/urlordjames/green-lib"

[dependencies.rfd]
version = "0.14"
default-features = false
features = [ "xdg-portal", "tokio" ]

[dependencies]
url = "2.5"
tokio = "1.38"
open = "5.3"
pretty_env_logger = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
tauri-winrt-notification = "0.4"

[target.'cfg(target_os = "linux")'.dependencies.ashpd]
version = "0.8"
features = [ "tokio" ]
default-features = false

[profile.release]
lto = "fat"

[features]
default = []
flatpak = []
