[package]
name = "green-updater"
version = "0.4.0"
edition = "2021"
authors = ["urlordjames <32751441+urlordjames@users.noreply.github.com>"]
license = "GPL-3.0+"

[dependencies.iced]
version = "0.13"
features = [ "tokio" ]

[dependencies.green-lib]
version = "0.7"
git = "https://github.com/urlordjames/green-lib"

[dependencies.rfd]
version = "0.15"
default-features = false
features = [ "xdg-portal", "tokio" ]

[dependencies.tracing-subscriber]
version = "0.3"
optional = true

[dependencies.tracing-appender]
version = "0.2"
optional = true

[dependencies.tracing-panic]
version = "0.1"
optional = true

[dependencies.pretty_env_logger]
version = "0.5"
optional = true

[dependencies]
tokio = "1"
open = "5.3"
log = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
tauri-winrt-notification = "0.6"

[target.'cfg(target_os = "linux")'.dependencies.ashpd]
version = "0.10"
features = [ "tokio" ]
default-features = false

[profile.release]
lto = "fat"

[features]
default = [ "file-logging" ]
flatpak = [ "env-logging" ]
env-logging = [ "pretty_env_logger" ]
file-logging = [ "tracing-subscriber", "tracing-appender", "tracing-panic" ]
